@@ -1,3 +1,7 @@
+- library:
+  o prevent disabling removing orphan if we failed to detect running kernel
+    version
+
 Version 7.27.3 - 30 May 2013, by Thierry Vignaud
 
 - library:
